# dome-light-project

./: README.md
Uncalibrated-Photometric-Stereo/: CMakeLists.txt
Uncalibrated-Photometric-Stereo/src/: main.cpp
grammar_checker/: tes.py
pca/: pca_multiple_image.py
pca-analysis/: pansharp_gray.py  pca_multiple_image.py  pca_single_img.py
pca-analysis/utils/: img_load.py
uncalibrated-photometric-stereo/: CMakeLists.txt
uncalibrated-photometric-stereo/.cache/clangd/index/: main.cpp.6CB84D74A5295CA5.idx
