CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
PROJECT(Uncalibrated-Photometric-Stereo)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# required packages
FIND_PACKAGE(OpenCV 4.9.0 REQUIRED)

FILE(GLOB SOURCES src/*.cpp src/*.h)
ADD_EXECUTABLE(main ${SOURCES})
TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS})
